# official-godot-python-mmo

./: .gitignore  README.md  copy-certs.sh
.github/workflows/: main.yml
client/: Actor.gd  Actor.tscn  Avatar.tscn  Chatbox.gd  Chatbox.tscn  Login.gd  Login.tscn  Main.gd  Main.tscn  Player.tscn  default_env.tres  icon.png.import  model.gd  packet.gd  project.godot  tilemap_packed.png.import  websockets_client.gd
client/.godot/editor/: filesystem_cache8  filesystem_update4  recent_dirs
client/.godot/imported/: tilemap_packed.png-7b301e6705a57389d2cd02d385b33920.ctex  tilemap_packed.png-7b301e6705a57389d2cd02d385b33920.md5
server/: __main__.py  manage.py  models.py  packet.py  protocol.py  pyproject.toml  utils.py
